--- a/HelloWorld/wwwroot/index.html
+++ b/HelloWorld/wwwroot/index.html
@@ -1,8 +1,44 @@
-<!doctype html>
-<html>
-  <head><meta charset="utf-8"><title>Hello</title></head>
-  <body>
-    <h1>Hello from ASP.NET Core Static Files 🎉</h1>
-    <p>If you see this, your server works.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My webpage</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+ 
+
+  
+  <header>
+    this is the header
+  </header>
+
+
+  <main>
+    
+   this is the main section
+   <form action="/submit_form" method="post">
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username" /><br /><br />
+  <button type="submit" name="submitButton" value="Submit" disabled>
+    Submit
+  </button>
+  <button type="button" onclick="alert('Hello!')">Click Me</button>
+</form>
+
+  </main>
+
+ 
+  <footer>
+
+    this is the footer
+  </footer>
+  
+
+  
+  
+</body>
 </html>
+
